--- a/buscador.html
+++ b/buscador.html
@@ -25,5 +25,10 @@
       </ul>
     </div>
   </header>
+
+  <section class="main">
+      <h2 class="main__title">¿Qué quieres ver hoy?</h2>
+      <input class="input" type="text" placeholder="buscar..."> 
+  </section>
 </body>
 </html>
